--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,36 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand" href="#">
+                <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
+                        href="index.html">
                         <img src="./assets/Pawsh.jpeg" class="navbar-image" alt="Pawsh">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="about.html">Our Mission <span
+                                        class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Adoption</a>
+                                <a class="nav-link" href="adoption.html">Adoption</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Services</a>
+                                <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="FAQs.html">FAQs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -44,7 +49,9 @@
     <main>
         <section class="featured-pet">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1466995937966-2e6f29c6ed60?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Featured Pet"> </div>
+                <img src="https://images.unsplash.com/photo-1466995937966-2e6f29c6ed60?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Featured Pet">
+            </div>
             <div class="details">
                 <h2>We make your favor</h2>
                 <p>(Image + Text)</p>
@@ -58,7 +65,9 @@
 
         <section class="adoption">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1470390356535-d19bbf47bacb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHBldCUyMGFkb3B0aW9ufGVufDB8MHwwfHx8Mg%3D%3D" alt="Pets Available"> </div>
+                <img src="https://images.unsplash.com/photo-1470390356535-d19bbf47bacb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHBldCUyMGFkb3B0aW9ufGVufDB8MHwwfHx8Mg%3D%3D"
+                    alt="Pets Available">
+            </div>
             <h2>Pets Available for Adoption</h2>
             <p>[Content]</p>
         </section>
@@ -71,11 +80,13 @@
         <section class="stories">
             <h2>Customer Pet Stories</h2>
             <div class="story">
-                <img src="https://images.unsplash.com/photo-1597467300696-ce10c74bbaa1?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Customer 1">
+                <img src="https://images.unsplash.com/photo-1597467300696-ce10c74bbaa1?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Customer 1">
                 <p>[Story 1]</p>
             </div>
             <div class="story">
-                <img src="https://images.unsplash.com/photo-1593173589854-c9c28824cc89?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDI2fHx8ZW58MHx8fHx8" alt="Customer 2">
+                <img src="https://images.unsplash.com/photo-1593173589854-c9c28824cc89?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDI2fHx8ZW58MHx8fHx8"
+                    alt="Customer 2">
                 <p>[Story 2]</p>
             </div>
         </section>
@@ -87,7 +98,8 @@
                 <p>Member Name 1</p>
             </div>
             <div class="member">
-                <img src="https://images.unsplash.com/photo-1559076728-a51fe1c1f97a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDMxfHx8ZW58MHx8fHx8" alt="Member 2">
+                <img src="https://images.unsplash.com/photo-1559076728-a51fe1c1f97a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDMxfHx8ZW58MHx8fHx8"
+                    alt="Member 2">
                 <p>Member Name 2</p>
             </div>
         </section>
@@ -99,31 +111,35 @@
 
         <section class="faqs">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1583512603866-910c8542ba1b?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="FAQs"> </div>
+                <img src="https://images.unsplash.com/photo-1583512603866-910c8542ba1b?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="FAQs">
+            </div>
             <h2>FAQs</h2>
             <p>[Content]</p>
         </section>
         <section class="faqs">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1692382496182-05f3984391fc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cGV0JTIwYm94fGVufDB8MXwwfHx8Mg%3D%3D" alt="Membership"> </div>
+                <img src="https://images.unsplash.com/photo-1692382496182-05f3984391fc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cGV0JTIwYm94fGVufDB8MXwwfHx8Mg%3D%3D"
+                    alt="Membership">
+            </div>
             <h2>Membership</h2>
             <p>[Content]</p>
         </section>
         <section class="faqs">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1611700885802-4ea038105709?q=80&w=986&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Contact-us"> </div>
+                <img src="https://images.unsplash.com/photo-1611700885802-4ea038105709?q=80&w=986&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Contact-us">
+            </div>
             <h2>Contact Us</h2>
             <p>[Content]</p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Pawsh Inc.</p>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+<footer>
+    <p>&copy; 2025 Pawsh Inc.</p>
+</footer>
 </html>
