--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Adoption Website</title>
+    <title>Pawsh&reg Inc. Mission</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand" href="index.html">
-                    <img src="./assets/Pawsh.jpeg" class="navbar-image" alt="Pawsh">
+                    <img src="./assets/logo.jpeg" class="navbar-image" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,8 @@
    
 
     <footer>
-        <p>&copy; 2025 Pawsh Inc.</p>
+        <p>&copy; 2025 Pawsh&reg
+ Inc.</p>
     </footer>
 
 
