--- a/FAQs.html
+++ b/FAQs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Adoption Website</title>
+    <title>PAWSH Inc. FAQs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
                         href="index.html">
-                        <img src="./assets/Pawsh.jpeg" class="navbar-image" alt="Pawsh">
+                        <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
