--- a/contact.html
+++ b/contact.html
@@ -4,40 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Adoption Website</title>
+    <title>PAWSH Inc. - Contact Us</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
         body {
             background-image: url('https://images.unsplash.com/photo-1508802153073-e549b30d1ac0?q=80&w=1115&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-            background-size: cover; 
-            background-repeat: no-repeat;
-            background-position: center center;
-            /* Center the image */
-            width: 100%;
-            /* Ensure body takes full width */
-            height: 100%;
-            /* Ensure body takes full height */
-            margin: 0;
-            /* Remove default margins */
         }
-
-        #contact-container {
-            background-color: rgba(255, 255, 255, 0.4);
-            /* Semi-transparent white background */
-            padding: 20px;
-            border-radius: 10px;
-            /* Rounded corners */
-            margin-top: 20px;
-            margin-bottom: 20px;
-            /* Make the container visible */
-            display: block;
-            /* or inline-block if needed */
-            margin-left: auto;
-            margin-right: auto;
-            float: left;
-        }
-
     </style>
 </head>
 <header>
@@ -45,7 +18,7 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
                     href="index.html">
-                    <img src="./assets/Pawsh.jpeg" class="navbar-image" alt="Pawsh">
+                    <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +50,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="contact-container">
         <div id="contact-container">
             <h2 id="contact-header">Contact Us</h2>
             <p>Have questions or want to learn more? Get in touch with us!</p>
@@ -128,4 +101,5 @@
 <footer>
     <p>&copy; 2025 Pawsh Inc.</p>
 </footer>
+
 </html>
