styles and content updated

--- a/index.html
+++ b/index.html
@@ -42,49 +42,46 @@
         /* Add other hover effects if desired */
     }
 </style>
+<header>
 
-<body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
-                        href="index.html">
-                        <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="about.html">Our Mission <span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="adoption.html">Adoption</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="FAQs.html">FAQs</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+    <!-- Navbar  -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
+                    href="index.html">
+                    <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="about.html">Our Mission <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="adoption.html">Adoption</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="services.html">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="FAQs.html">FAQs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </nav>
-    </header>
-    <style>
-        header,
-        footer {
-            width: 100%;
-        }
-    </style>
+        </div>
+    </nav>
+</header>
+
+<body>
+
+
     <main>
         <section class="featured-pet">
             <div class="image-block">
@@ -121,9 +118,11 @@
             <h2>Meet Our Team</h2>
             <div class="member">
 
-                <p>"Through my vision to create an ethical, care-based bridge for families and fur friends to connect, Pawsh leads the forefront in forging unique bonds that hold high standards and integrity in every pairing Pawsh helps bring together.
+                <p>"Through my vision to create an ethical, care-based bridge for families and fur friends to connect,
+                    Pawsh leads the forefront in forging unique bonds that hold high standards and integrity in every
+                    pairing Pawsh helps bring together.
                     <br>
-                   ~ Param Javastrapni, Founder
+                    ~ Param Javastrapni, Founder
                 </p>
                 <img src="https://images.pexels.com/photos/6497112/pexels-photo-6497112.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="Member 1">
