--- a/adoption.html
+++ b/adoption.html
@@ -182,6 +182,7 @@
     }
 </style>
 <header>
+    <!-- Navbar  -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
@@ -217,6 +218,10 @@
 </header>
 
 <body>
+    
+
+
+    <!-- Pet Snapshots -->
     <div class="container">
         <div class="pet-container">
         </div>
