update js and css, services and about page

--- a/services.html
+++ b/services.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAWSH Inc. Services</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Challenge</title>
+    <link rel="stylesheet" href="./style.css">
+    
 </head>
 <style>
-    .letter{
-        text-align: center;
-        margin: 40px;
+    header,
+    footer {
+        width: 100%;
     }
+
+    body {
+        background-image: url('https://images.unsplash.com/photo-1508802153073-e549b30d1ac0?q=80&w=1115&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+  
+
+
+  
 </style>
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -51,23 +61,10 @@
         </nav>
     </nav>
 </header>
-
 <body>
-
-    
-
+    <div id="market"></div>
 
 
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./partBchallenge.js"></script>
 </body>
-<footer>
-    <p>&copy; 2025 Pawsh Inc.</p>
-</footer>
-
 </html>
