--- a/about.html
+++ b/about.html
@@ -40,10 +40,18 @@
         </div>
     </nav>
 </header>
+<style>
+    .Letter {
+        margin-left: 100px;
+        margin-right: 100px;
+        text-align: center;
+    }
+</style>
 <body>
     
     <div class="Letter">
         <h2>The Pawsh&reg Mission:</h2>
+        <img src="https://images.unsplash.com/photo-1651807690642-636dd0cfe76c?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fGhhcHB5JTIwZmFtaWx5JTIwd2l0aCUyMHBldHxlbnwwfDB8MHx8fDI%3D" alt="dog-beach">
         <p>Founded in 2012, Pawsh is dedicated to enriching lives by connecting exceptional pets with loving families.  Leveraging our extensive background in veterinary medicine and purebred judging, we maintain the highest standards for the health, temperament, and overall well-being of every animal we represent.  Unlike traditional pet stores or online marketplaces, Pawsh meticulously selects our pets through partnerships with reputable local and regional breeders, as well as carefully assessing and training animals from families and shelters in transition. This rigorous process, combined with our commitment to transparency and client education, ensures a trustworthy and satisfying experience for every adopter.</p>
         <h3>Who We Partner With</h3>
         <p>To further support our mission of responsible pet placement, Pawsh partners with local pet photographers, specializing in capturing the unique personality of each animal. By booking a photography session through Pawsh, clients not only receive cherished memories but also contribute a portion of the proceeds to support the vital work of the Cincinnati Animal CARE Humane Society.</p>
