add detail and edit/change photos css

--- a/index.html
+++ b/index.html
@@ -100,17 +100,25 @@
 
         <section class="adoption">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1470390356535-d19bbf47bacb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHBldCUyMGFkb3B0aW9ufGVufDB8MHwwfHx8Mg%3D%3D"
+                <img src="https://images.unsplash.com/photo-1496284427489-f59461d8a8e6?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGNhdCUyMGluJTIwYXJtc3xlbnwwfDB8MHx8fDI%3D"
                     alt="Pets Available">
+                    <br>
             </div>
             <h2>New Friends!</h2>
             <a href="./adoption.html" class="button">Adopt Me</a>
-            <p>[Content]</p>
+            <p>See our newest available pets! Will one be your new best friend?</p>
         </section>
 
         <section class="details">
-            <h2>Store Details</h2>
-            <p>[Content]</p>
+            <h2>Store Hours:</h2>
+            <p>Monday: closed</p>
+            <p>Tuesday: 10:00am - 8:00pm</p>
+            <p>Wednsday: 10:00am - 8:00pm</p>
+            <p>Thursday: 10:00am - 8:00pm</p>
+            <p>Friday: 10:00am - 9:00pm</p>
+            <p>Saturday: 10:00am - 9:00pm</p>
+            <p>Sunday: 12:00pm - 6:00pm</p>
+
         </section>
 
 
@@ -129,10 +137,9 @@
             </div>
             <div class="member">
 
-                <p>Not only does she keep meticulous records, Elemina also spearheads the animal photography that we
-                    offer our breeders and families to help their fur friends put their best paw forward!
+                <p>"Not only do I ensure the safety and quality of all our pets and their breeder and adoptive families, I also spearhead the animal photography that we offer our breeders and families to help their fur friends put their best paw forward!""
                     <br>
-                    Elemina Boolean, Manager
+                    ~ Elemina Boolean, Manager
                 </p>
                 <img src="https://images.pexels.com/photos/3936894/pexels-photo-3936894.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="Member 2">
@@ -152,10 +159,9 @@
                 <img src="https://images.pexels.com/photos/7752806/pexels-photo-7752806.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt="Customer 1">
 
-                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They
-                    clearly care about the animals and made sure I was a good fit for my new furry friend."
+                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They clearly care about reputation, and about all the animals; they made sure I was a good fit for my new furry friend."
                     <br>
-                    ~ Tara Weils, Cinci OH
+                    ~ Cara S. Seder, Cinci OH
                 </p>
 
 
@@ -163,10 +169,9 @@
             <div class="story">
                 <img src="https://images.pexels.com/photos/16454770/pexels-photo-16454770/free-photo-of-elegant-mother-posing-with-daughter-and-white-dog.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt="Customer 2">
-                <p>"Mom surprised me with a puppy she adopted from Pawsh for my 10th birthday! She even came with the
-                    cutest dog toys! They were so nice, and now I have the cuddliest best friend ever!!"
+                <p>"Mom surprised me with a puppy she adopted from Pawsh for my 10th birthday! She even came with the cutest dog toys! They were so nice, and now I have the cuddliest best friend ever!!"
                     <br>
-                    ~ Max Laird, Loveland OH
+                    ~ Rea Act, Loveland OH
                 </p>
 
             </div>
@@ -174,7 +179,7 @@
 
         <section class="faqs">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1583512603866-910c8542ba1b?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                <img src="https://images.unsplash.com/photo-1692382496182-05f3984391fc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cGV0JTIwYm94fGVufDB8MXwwfHx8Mg%3D%3D"
                     alt="FAQs">
             </div>
             <h2>Our Most Common</h2>
@@ -184,11 +189,11 @@
         </section>
         <section class="services">
             <div class="image-block">
-                <img src="https://images.unsplash.com/photo-1692382496182-05f3984391fc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cGV0JTIwYm94fGVufDB8MXwwfHx8Mg%3D%3D"
+                <img src="https://images.pexels.com/photos/14219030/pexels-photo-14219030.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="Membership">
             </div>
             <h2>Check Out Our</h2>
-            <a href="./adoption.html" class="button">Services</a>
+            <a href="./services.html" class="button">Services</a>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate sunt, ducimus at vitae minima
                 accusantium tenetur delectus voluptatibus deserunt omnis!</p>
         </section>
@@ -213,3 +218,4 @@
 </footer>
 
 </html>
+
