--- a/index.html
+++ b/index.html
@@ -8,40 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    .button {
-        display: inline-block;
-        /* Or block, depending on your layout */
-        position: center;
-        padding: 2px 10px;
-        /* Adjust padding as needed - slightly larger than Contact Us */
-        background-color: #876f6d;
-        /* A more inviting/action-oriented color - example: coral/salmon */
-        color: white;
-        /* White text is good on darker backgrounds */
-        text-decoration: none;
-        /* Remove underline */
-        border: none;
-        /* Remove default border */
-        border-radius: 30px;
-        /* Slightly more rounded corners - adjust to your preference */
-        cursor: pointer;
-        font-size: 1.1em;
-        /* Slightly larger font size to stand out */
-        font-weight: bold;
-        /* Make the text bold for emphasis */
-        /* Add any other button styling you like */
-        width: 150px;
-        height: 30px;
-        align-items: center;
-    }
-
-    .button:hover {
-        background-color: #88a37d;
-        /* Slightly darker hover color for feedback */
-        /* Add other hover effects if desired */
-    }
-</style>
 <header>
 
     <!-- Navbar  -->
@@ -126,9 +92,7 @@
             <h2>Meet Our Team</h2>
             <div class="member">
 
-                <p>"Through my vision to create an ethical, care-based bridge for families and fur friends to connect,
-                    Pawsh leads the forefront in forging unique bonds that hold high standards and integrity in every
-                    pairing Pawsh helps bring together.
+                <p>"My vision to create an ethical, care-based bridge for families and fur friends to connect, has forged unique bonds while maintaining high standards and integrity in every pairing."
                     <br>
                     ~ Param Javastrapni, Founder
                 </p>
@@ -137,7 +101,7 @@
             </div>
             <div class="member">
 
-                <p>"Not only do I ensure the safety and quality of all our pets and their breeder and adoptive families, I also spearhead the animal photography that we offer our breeders and families to help their fur friends put their best paw forward!""
+                <p>"Not only do I ensure the safety and quality of all, I also spearhead the photography that we offer our breeders and families to help their fur friends put their best paw forward!""
                     <br>
                     ~ Elemina Boolean, Manager
                 </p>
@@ -149,6 +113,7 @@
         <section class="thanks">
             <img src="https://images.unsplash.com/photo-1554830072-52d78d0d4c18?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cGV0JTIwYWRvcHRpb258ZW58MHwxfDB8fHwy"
                 alt="thanks">
+                <br>
             <p>Thank you on behalf of our fur friends and partners, for choosing Pawsh for your family!</p>
         </section>
 
@@ -159,7 +124,7 @@
                 <img src="https://images.pexels.com/photos/7752806/pexels-photo-7752806.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt="Customer 1">
 
-                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They clearly care about reputation, and about all the animals; they made sure I was a good fit for my new furry friend."
+                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They clearly care about  about all the animals and made sure we were a good fit!"
                     <br>
                     ~ Cara S. Seder, Cinci OH
                 </p>
