added FAQs html and style

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
             <div class="image-block">
                 <img src="https://images.unsplash.com/photo-1496284427489-f59461d8a8e6?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGNhdCUyMGluJTIwYXJtc3xlbnwwfDB8MHx8fDI%3D"
                     alt="Pets Available">
-                    <br>
             </div>
             <h2>New Friends!</h2>
             <a href="./adoption.html" class="button">Adopt Me</a>
@@ -92,7 +91,8 @@
             <h2>Meet Our Team</h2>
             <div class="member">
 
-                <p>"My vision to create an ethical, care-based bridge for families and fur friends to connect, has forged unique bonds while maintaining high standards and integrity in every pairing."
+                <p>"My vision to create an ethical, care-based bridge for families and fur friends to connect, has
+                    forged unique bonds while maintaining high standards and integrity in every pairing."
                     <br>
                     ~ Param Javastrapni, Founder
                 </p>
@@ -101,7 +101,8 @@
             </div>
             <div class="member">
 
-                <p>"Not only do I ensure the safety and quality of all, I also spearhead the photography that we offer our breeders and families to help their fur friends put their best paw forward!""
+                <p>"Not only do I ensure the safety and quality of all, I also spearhead the photography that we offer
+                    our breeders and families to help their fur friends put their best paw forward!""
                     <br>
                     ~ Elemina Boolean, Manager
                 </p>
@@ -113,7 +114,7 @@
         <section class="thanks">
             <img src="https://images.unsplash.com/photo-1554830072-52d78d0d4c18?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cGV0JTIwYWRvcHRpb258ZW58MHwxfDB8fHwy"
                 alt="thanks">
-                <br>
+            <br>
             <p>Thank you on behalf of our fur friends and partners, for choosing Pawsh for your family!</p>
         </section>
 
@@ -124,7 +125,8 @@
                 <img src="https://images.pexels.com/photos/7752806/pexels-photo-7752806.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt="Customer 1">
 
-                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They clearly care about  about all the animals and made sure we were a good fit!"
+                <p>"I recently adopted a dog from Pawsh Inc., and I couldn't be happier with the experience. They
+                    clearly care about about all the animals and made sure we were a good fit!"
                     <br>
                     ~ Cara S. Seder, Cinci OH
                 </p>
@@ -134,7 +136,8 @@
             <div class="story">
                 <img src="https://images.pexels.com/photos/16454770/pexels-photo-16454770/free-photo-of-elegant-mother-posing-with-daughter-and-white-dog.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt="Customer 2">
-                <p>"Mom surprised me with a puppy she adopted from Pawsh for my 10th birthday! She even came with the cutest dog toys! They were so nice, and now I have the cuddliest best friend ever!!"
+                <p>"Mom surprised me with a puppy she adopted from Pawsh for my 10th birthday! She even came with the
+                    cutest dog toys! They were so nice, and now I have the cuddliest best friend ever!!"
                     <br>
                     ~ Rea Act, Loveland OH
                 </p>
@@ -183,4 +186,3 @@
 </footer>
 
 </html>
-
